# farhost

./: .gitignore  .p10k.zsh  .tmux.conf  .zshrc  LICENSE  README.md  setup.sh
.tmux/plugins/devflow/: devflow.sh  devflow.tmux
dev/services/: README.md
dev/services/postgres/: README.md  postgres.yaml
devflow/: .coverage  devflow.db  plan.md  prd.md  pyproject.toml
devflow/docs/: prd.md  tdd.md
devflow/src/devflow/: __init__.py  __main__.py  app.py  cli.py
devflow/src/devflow/db/: connection.py  models.py  queries.py  schema.sql
devflow/src/devflow/screens/: categories.py  daily.py  projects.py  tasks.py  timer.py  weekly.py
devflow/src/devflow/timer/: engine.py
devflow/src/devflow/widgets/: bar_chart.py  command_bar.py  modal.py
devflow/tests/: conftest.py  test_cli.py  test_connection.py  test_engine.py  test_models.py  test_queries.py
devflow/tmux/: devflow.tmux
ghostty/: config
nvim/: init.lua  lazy-lock.json
nvim/lua/: file_marker.lua  general.lua
nvim/lua/plugins/: completions.lua  debugger.lua  dracula.lua  fluromachine.lua.bak  git.lua  lsp-config.lua  neo-tree.lua  none-ls.lua  telescope.lua  treesitter.lua  ufo.lua
services/postgres/: README.md  postgres.yaml
services/postgres/init-scripts/: 01-init-databases.sql
