[project]
name = "devflow"
version = "0.1.0"
description = "A local-first, keyboard-centric TUI for time tracking and flow analysis"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.89.0",
]

[project.scripts]
devflow = "devflow.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["devflow"]

[tool.coverage.report]
show_missing = true
